<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rojo_ipd"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.openlab.laacademia.ui.login.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ipd"
        android:textColor="@color/blanco"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/app_name"
        android:textColor="@color/blanco"
        android:textColorHighlight="@color/blanco"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dni_apoderado"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/blanco"
                android:textColorHint="@color/blanco" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/blanco"
            android:theme="@style/EditTextWhite">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contraseña"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/blanco"
                android:textColorHint="@color/blanco" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ingresar"
            android:theme="@style/RaisedButtonAccent" />
    </LinearLayout>

</LinearLayout>